# 2D-Raycasting-Engine

./: .gitignore  CMakeLists.txt
include/: boundary.h  editor.h  editor_inspectors.h  engine_color.h  engine_primitives.h  input.h  particle.h  ray.h  renderer.h  scene_manager.h  selection_system.h  vector2Math.h
src/: boundary.cpp  editor.cpp  editor_inspectors.cpp  engine_color.cpp  input.cpp  main.cpp  particle.cpp  ray.cpp  renderer.cpp  scene_manager.cpp  selection_system.cpp  vector2Math.cpp  vector2_math.cpp
